<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_all_betweenButtons">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_all_betweenButtons">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/environmentSimulatorRoadConditions_ice"
            android:onClick="ice"
            android:paddingStart="@dimen/margin_all_betweenButtons"
            android:paddingEnd="@dimen/margin_all_betweenButtons"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/environmentsimulatorRoadConditions_warmice"
            android:onClick="warm_ice"
            android:paddingStart="@dimen/margin_all_betweenButtons"
            android:paddingEnd="@dimen/margin_all_betweenButtons"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/environmentsimulatorRoadConditions_wet"
            android:onClick="wet"
            android:paddingStart="@dimen/margin_all_betweenButtons"
            android:paddingEnd="@dimen/margin_all_betweenButtons"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/environmentsimulatorRoadConditions_severity"
        android:gravity="center"
        android:textSize="@dimen/textSize_environmentSimulator_heading"
        android:layout_marginBottom="@dimen/margin_environmentSimulator_belowHeader"/>

    <SeekBar
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_all_betweenButtons"
        android:id="@+id/seekbar_environmentSimulatorRoadConditions_severity" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/environmentsimulatorRoadConditions_typesOfRoad"
        android:gravity="center"
        android:textSize="@dimen/textSize_environmentSimulator_heading"
        android:layout_marginBottom="@dimen/margin_environmentSimulator_belowHeader"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/environmentsimulatorRoadConditions_paved"
            android:onClick="paved"
            android:paddingStart="@dimen/margin_all_betweenButtons"
            android:paddingEnd="@dimen/margin_all_betweenButtons"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/environmentsimulatorRoadConditions_gravel"
            android:onClick="gravel"
            android:paddingStart="@dimen/margin_all_betweenButtons"
            android:paddingEnd="@dimen/margin_all_betweenButtons"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/environmentsimulatorRoadConditions_dirt"
            android:onClick="dirt"
            android:paddingStart="@dimen/margin_all_betweenButtons"
            android:paddingEnd="@dimen/margin_all_betweenButtons"/>

    </RadioGroup>


</LinearLayout>